--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <module>asycn-annotation</module>
     <module>opentelemetry</module>
     <module>webflux</module>
+    <module>web</module>
   </modules>
 
   <dependencies>
